k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: book-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: book-service
  type: ClusterIP
